# backend/api/src/types/deck.ts
@@ -124,7 +124,17 @@ export interface RefineDeckRequest {
   history: string[];
   preserveExistingPairs: boolean;
   currentDeck: LLMDeck;
-} 
+}
+
+export interface ExtractNameRequest {
+  wordpairs: WordPairInput[];
+}
+
+export interface ExtractNameResponse {
+  name: string;
+  languageFrom: string;
+  languageTo: string;
+}
 
 export interface apiSuccessResponse<T> {
   success: boolean;
